microservices-k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-load-balancer
spec:
  type: LoadBalancer
  ports:
  - name: ui
    protocol: TCP
    port: 80
    targetPort: 80
    selector:
      name: ui
